--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0-beta.2",
     "@vue/cli-plugin-eslint": "~5.0.0-beta.2",
+    "@vue/cli-plugin-router": "^5.0.0-beta.2",
+    "@vue/cli-plugin-vuex": "^5.0.0-beta.2",
     "@vue/cli-service": "~5.0.0-beta.2",
     "@vue/compiler-sfc": "^3.0.4",
     "eslint": "^7.20.0",
